css/ie/ie7.css
.block-search-form form .form-actions input {
  right: -98px;
}

.block-search-form form .extendsearch-advanced span.fieldset-legend {
  right: 9px;
}

.block-ding-user-frontend-ding-username h2,
.block-user-login .block-title {
  height: 31px;
  padding-top: 0;
}

.block-search-form {
  height: 60px;
}

.grid-4.region-branding {
  top: 0;
}

.region-header-second-inner {
  left: 0px;
  top: 0;
  width: 100%;
}

.region-user-first {
  z-index: 49;
}

.region-user-second {
  z-index: 50;
}

.zone-menu-wrapper {
  position: relative;
  z-index: 48;
}

.zone-branding-wrapper {
  position: relative;
  z-index: 60;
}

.region-user-first-inner {
  margin-left: -10px;
}

.block-search-form form .form-item {
  overflow: hidden;
}

.block-search-form form .form-actions input {
  margin-top: 1px;
}

.zone-branding {
  height: 270px;
}

.region-user-second {
  margin-top: 66px;
  padding-top: 0;
}

.block-search-form form .ui-autocomplete-input {
  height: 40px;
  padding-top: 10px;
}

.block-main-menu .content ul li.active > a {
  width: 141px;
}

.block-main-menu .content > ul > li > a {
  font-size: 11px;
}

#region-user-first {
  bottom: -10px;
}

